Fix z-index for the navigation pop-up

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -89,7 +89,7 @@
     height: 100vh;
     transform: translateX(100%);
     transition: transform 0.5s ease-out;
-    z-index: 20;
+    z-index: 50;
   }
   .nav-mobile img {
     align-self: flex-end;
